# MPPMVP

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  render.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/adapters/: __init__.py  base.py  basketball.py  f1.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  leagues.py  predictions.py  users.py
backend/app/core/: config.py
backend/app/domain/: enums.py  models.py  scoring.py
backend/app/repositories/: __init__.py  base.py  memory.py  seed.py  sql.py
backend/app/schemas/: __init__.py  models.py
backend/tests/: conftest.py  test_api.py  test_scoring.py
docs/: ARCHITECTURE.md  PRODUCTION-ARCHITECTURE.md
docs/specs/: 2026-06-15-mpp-plus-design.md
mobile/: .env.example  .gitignore  App.tsx  README.md  app.json  jest.config.js  package-lock.json  package.json
mobile/__tests__/: adapter.test.ts  scoring.test.ts  time.test.ts
mobile/app/: _layout.tsx
mobile/preview/: index.html
mobile/scripts/: preview-mobile.mjs
mobile/src/: types.ts
public/: manifest.webmanifest
scripts/: generate-icons.mjs
sports-api/: .env.example  package-lock.json  package.json
src/app/: globals.css  (+2 more)
supabase/: schema.sql  seed.sql
tests/: adapters.test.ts  mock-provider.test.ts  scoring.test.ts  time.test.ts
(+105 files in other folders)
